# northstar-agones-plugin

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: build.yml
manifest/: manifest.json
src/: lib.rs
unrelated/: docker-compose.yaml
