[package]
name = "northstar-agones-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rrplug = "2.0.0"
agones = { git = "https://github.com/googleforgames/agones.git", tag = "v1.31.0" }
tokio = { version = "1.7", features = ["macros", "sync"] }

[build-dependencies]
windres = "0.2.2"

[lib]
crate-type = ["cdylib"]